[package]
name = "glmaze-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
gl = "0.14.0"
image = "0.24.4"
cgmath = "0.18.0"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
rust-ini = "0.19"