[package]
name = "glmaze-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.29.11"
glutin = "0.31.3"
glutin-winit = "0.4.2"
raw-window-handle = "0.5.0"
dirs = "5.0"
gl = "0.14.0"
image = "0.24.4"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
rust-ini = "0.19"
kira = "0.8.7"
nalgebra-glm = "0.18.0"
gpu-allocator = "0.25.0"
ash = {version = "0.37.3", features = ["linked", "debug"]}
ash-window = "0.12.0"
